package je.applicatie.domain.soexintegratie.Adapters;

import org.springframework.stereotype.Service;

@Service
public class BouwsteenAdapter {
}
